# media-viewer

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  server.js
docs/: SPEC.md  TODO-geocoding.md  image-tagging-spec.md  remaining-tasks.md  tauri-implementation-notes.md  tauri-migration-plan.md
docs/archive/: tauri-implementation-notes.md  tauri-migration-plan.md
lib/: scanner.js  thumbnail.js
public/: index.html
public/css/: style.css
public/js/: gallery.js  kana-converter.js  lightbox.js  tauri-app.js  virtual-scroll.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/helpers/: reverse-geocoder.swift  vision-tagger.swift
src-tauri/icons/: icon.icns
src-tauri/src/: geo_dict.rs  label_dict.rs  lib.rs  scanner.rs  tagger.rs  thumbnail.rs  video_server.rs
