[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-store = "2.4.2"
walkdir = "2.5.0"
tauri-plugin-fs = "2.4.5"
image = "0.25.6"
md-5 = "0.10.6"
kamadak-exif = "0.6.1"
percent-encoding = "2.3.2"
dirs = "6.0.0"

# Optimize dependencies even in dev mode (critical for image processing)
[profile.dev.package."*"]
opt-level = 2

[dev-dependencies]
tempfile = "3.27.0"
